# mycrews

./: .gitignore  README.md
agent-mesh/: README.md  pyproject.toml  report.md
agent-mesh/src/agent_mesh/: crew.py  main.py
agent-mesh/src/agent_mesh/config/: agents.yaml  tasks.yaml
agent-mesh/src/agent_mesh/tools/: agent_discovery_tool.py
