[project]
name = "agent_mesh"
version = "0.1.0"
description = "agent-mesh using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.80.0, <1.0.0",
    "onnxruntime==1.15.0",
    "socksio>=1.0.0",
    "pyarrow==17.0.0"
]
[project.scripts]
agent_mesh = "agent_mesh.main:run"
run_crew = "agent_mesh.main:run"
train = "agent_mesh.main:train"
replay = "agent_mesh.main:replay"
test = "agent_mesh.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
